apps/base/stalwart/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
spec:
  parentRefs:
    - name: webui
      namespace: stalwart
      kind: ListenerSet
  rules:
    - backendRefs:
        - name: ${stalwart_fullname}
          port: 80
