apps/base/stalwart/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: smtp
spec:
  parentRefs:
    - kind: ListenerSet
      name: mail
      sectionName: smtp
  rules:
    - backendRefs:
        - name: ${stalwart_fullname}
          port: 25
